--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "purgecss -css bundle.css -con Page1.html -o optimizedBundle.css -keyframes"
+    "optimizeCSS": "purgecss -css bundle.css -con Page1.html -o optimizedBundle.css -keyframes",
+    "base64Encode": "./bin/image2base64 t-stoa60.jpg --json | jq '.[0]|.base64' > foo.base64"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "image2base64-cli": "^2.4.1",
-    "purgecss": "^4.0.3"
+    "camelcase": "^6.2.0",
+    "chokidar": "^3.5.2",
+    "file-type": "^16.5.3",
+    "minimist": "^1.2.5",
+    "purgecss": "^4.0.3",
+    "tslib": "^2.3.1"
   }
 }
