--- a/package.json
+++ b/package.json
@@ -5,18 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "optimizeCSS": "purgecss -css bundle.css -con Page1.html -o optimizedBundle.css -keyframes",
-    "base64Encode": "./bin/image2base64 t-stoa60.jpg --json | jq '.[0]|.base64' > t-stoa60.base64"
+    "optimizeCSS": "purgecss --css assets/bundle.css --content page1/Page1.html --output page1/optimizedBundle.css -keyframes",
+    "bundle": "mkdir --parents page1/assets && cp --recursive --update assets/fonts page1/assets && zip --junk-paths build/Page1 page1/*",
+    "build": "npm run optimizeCSS && npm run bundle"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "camelcase": "^6.2.0",
-    "chokidar": "^3.5.2",
-    "file-type": "^16.5.3",
-    "minimist": "^1.2.5",
-    "purgecss": "^4.0.3",
-    "tslib": "^2.3.1"
+    "purgecss": "^4.0.3"
   }
 }
